--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -2324,6 +2324,48 @@
             </objects>
             <point key="canvasLocation" x="444" y="-840"/>
         </scene>
+        <!--Payement option-->
+        <scene sceneID="yAL-AA-ZXm">
+            <objects>
+                <viewController storyboardIdentifier="CreatePaymentViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="qbe-Fo-P1c" customClass="CreatePaymentViewController" customModule="Hippo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zRa-hM-eUX"/>
+                        <viewControllerLayoutGuide type="bottom" id="jRZ-ig-mki"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="weV-IB-6H3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YUH-GA-7Yh">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="YUH-GA-7Yh" secondAttribute="trailing" id="Pgk-VD-2kF"/>
+                            <constraint firstItem="YUH-GA-7Yh" firstAttribute="top" secondItem="zRa-hM-eUX" secondAttribute="bottom" id="Y9d-zf-MkH"/>
+                            <constraint firstItem="jRZ-ig-mki" firstAttribute="top" secondItem="YUH-GA-7Yh" secondAttribute="bottom" id="qDA-YV-tjb"/>
+                            <constraint firstItem="YUH-GA-7Yh" firstAttribute="leading" secondItem="weV-IB-6H3" secondAttribute="leading" id="wKA-23-R62"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Payement option" id="mgM-kT-QZ8">
+                        <barButtonItem key="leftBarButtonItem" image="backButtonNormalStateIcon" id="lGp-gM-wyj">
+                            <connections>
+                                <action selector="backButtonAction:" destination="qbe-Fo-P1c" id="xKT-Vz-RFO"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="backButton" destination="lGp-gM-wyj" id="YNG-Wv-iMp"/>
+                        <outlet property="tableView" destination="YUH-GA-7Yh" id="G3K-KU-d6k"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hdz-Ho-Xym" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-402" y="3260"/>
+        </scene>
     </scenes>
     <resources>
         <image name="app_loader_shape" width="40" height="40"/>
