--- a/Hippo/UIView/TableViewCell/ShowMoreTableViewCell/ShowMoreTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/ShowMoreTableViewCell/ShowMoreTableViewCell.xib
@@ -13,51 +13,64 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="46" id="KGk-i7-Jjw" customClass="ShowMoreTableViewCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="46"/>
+            <rect key="frame" x="0.0" y="0.0" width="292" height="46"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="45.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="292" height="45.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jdo-x1-O9K">
-                        <rect key="frame" x="5" y="5" width="310" height="40"/>
+                        <rect key="frame" x="10" y="5" width="277" height="40"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEm-dq-i3c">
-                                <rect key="frame" x="185" y="0.0" width="120" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="D9g-Pz-IiL"/>
-                                    <constraint firstAttribute="width" constant="120" id="gCZ-Kq-oNC"/>
-                                </constraints>
-                                <state key="normal" title="Show More"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="BoldFontSize">
-                                        <real key="value" value="14"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="showMoreClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="1JC-M3-wD3"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="jpl-xy-QnM">
+                                <rect key="frame" x="0.0" y="0.0" width="277" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="bAK-ei-Dc2">
+                                        <rect key="frame" x="0.0" y="0.0" width="152" height="40"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEm-dq-i3c">
+                                        <rect key="frame" x="157" y="0.0" width="120" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="D9g-Pz-IiL"/>
+                                            <constraint firstAttribute="width" constant="120" id="gCZ-Kq-oNC"/>
+                                        </constraints>
+                                        <state key="normal" title="Show More"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="BoldFontSize">
+                                                <real key="value" value="14"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="showMoreClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="1JC-M3-wD3"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="MEm-dq-i3c" secondAttribute="bottom" id="BYL-Dc-8jX"/>
-                            <constraint firstAttribute="trailing" secondItem="MEm-dq-i3c" secondAttribute="trailing" constant="5" id="WbJ-EI-nmz"/>
-                            <constraint firstItem="MEm-dq-i3c" firstAttribute="top" secondItem="Jdo-x1-O9K" secondAttribute="top" id="tLa-af-5p1"/>
+                            <constraint firstItem="jpl-xy-QnM" firstAttribute="leading" secondItem="Jdo-x1-O9K" secondAttribute="leading" id="Sw7-Wc-pBW"/>
+                            <constraint firstAttribute="trailing" secondItem="jpl-xy-QnM" secondAttribute="trailing" id="a7s-5V-aIX"/>
+                            <constraint firstItem="jpl-xy-QnM" firstAttribute="top" secondItem="Jdo-x1-O9K" secondAttribute="top" id="pRO-U1-gz7"/>
+                            <constraint firstAttribute="bottom" secondItem="jpl-xy-QnM" secondAttribute="bottom" id="wfh-fd-9Sj"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Jdo-x1-O9K" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="6A5-M4-q4n"/>
                     <constraint firstAttribute="trailing" secondItem="Jdo-x1-O9K" secondAttribute="trailing" constant="5" id="OOl-BJ-obR"/>
-                    <constraint firstItem="Jdo-x1-O9K" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="RzA-s1-5I2"/>
+                    <constraint firstItem="Jdo-x1-O9K" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="RzA-s1-5I2"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="showMoreButton" destination="MEm-dq-i3c" id="ip4-cx-sEO"/>
+                <outlet property="totalPriceLabel" destination="bAK-ei-Dc2" id="uZ5-YS-ta1"/>
             </connections>
-            <point key="canvasLocation" x="21" y="36"/>
+            <point key="canvasLocation" x="-1.6000000000000001" y="35.982008995502248"/>
         </tableViewCell>
     </objects>
 </document>
