--- a/Hippo/UIView/TableViewCell/HippoActionMessage/ActionTableView.xib
+++ b/Hippo/UIView/TableViewCell/HippoActionMessage/ActionTableView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,17 +20,17 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ro-fo-179">
-                        <rect key="frame" x="8.5" y="1.5" width="328" height="242.5"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <rect key="frame" x="-1.5" y="1.5" width="398" height="242.5"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="URa-8c-U0v">
-                        <rect key="frame" x="10" y="3" width="325" height="239.5"/>
+                        <rect key="frame" x="0.0" y="3" width="395" height="239.5"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="dSH-ON-OGt">
-                                <rect key="frame" x="5" y="2" width="318" height="235.5"/>
+                                <rect key="frame" x="5" y="2" width="388" height="235.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Reo-2Q-haK">
-                                        <rect key="frame" x="0.0" y="0.0" width="318" height="14"/>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Reo-2Q-haK">
+                                        <rect key="frame" x="0.0" y="-14" width="388" height="14"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="14" id="61n-Xy-ZQc"/>
                                         </constraints>
@@ -39,23 +39,23 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zsx-tN-afG">
-                                        <rect key="frame" x="0.0" y="16" width="318" height="202.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="388" height="235.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bo2-Ah-On8">
-                                        <rect key="frame" x="0.0" y="220.5" width="318" height="15"/>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bo2-Ah-On8">
+                                        <rect key="frame" x="0.0" y="235.5" width="388" height="15"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="1os-du-2P9">
-                                                <rect key="frame" x="0.0" y="0.0" width="316" height="15"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="386" height="15"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="eol-VA-xW3">
-                                                        <rect key="frame" x="0.0" y="0.0" width="296" height="15"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="366" height="15"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cep-DE-BI2">
-                                                        <rect key="frame" x="301" y="0.0" width="15" height="15"/>
+                                                        <rect key="frame" x="371" y="0.0" width="15" height="15"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="cep-DE-BI2" secondAttribute="height" multiplier="1:1" id="X5V-DZ-aZ6"/>
                                                             <constraint firstAttribute="height" constant="15" id="pY7-A2-0wS"/>
@@ -76,7 +76,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="dSH-ON-OGt" firstAttribute="top" secondItem="URa-8c-U0v" secondAttribute="top" constant="2" id="Pcy-Yy-tnL"/>
                             <constraint firstAttribute="trailing" secondItem="dSH-ON-OGt" secondAttribute="trailing" constant="2" id="UG6-u9-7fL"/>
@@ -88,12 +88,12 @@
                 <constraints>
                     <constraint firstItem="4Ro-fo-179" firstAttribute="trailing" secondItem="URa-8c-U0v" secondAttribute="trailing" constant="1.5" id="2m6-2C-azh"/>
                     <constraint firstAttribute="bottom" secondItem="URa-8c-U0v" secondAttribute="bottom" constant="3" id="Jae-yx-VdD"/>
-                    <constraint firstItem="URa-8c-U0v" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="MNp-LJ-wbU"/>
+                    <constraint firstItem="URa-8c-U0v" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="MNp-LJ-wbU"/>
                     <constraint firstItem="URa-8c-U0v" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="UX3-v2-KeI"/>
                     <constraint firstItem="4Ro-fo-179" firstAttribute="top" secondItem="URa-8c-U0v" secondAttribute="top" constant="-1.5" id="Wap-oE-jjb"/>
                     <constraint firstItem="4Ro-fo-179" firstAttribute="bottom" secondItem="URa-8c-U0v" secondAttribute="bottom" constant="1.5" id="fqz-mE-Liv"/>
                     <constraint firstItem="4Ro-fo-179" firstAttribute="leading" secondItem="URa-8c-U0v" secondAttribute="leading" constant="-1.5" id="sjO-jI-7dM"/>
-                    <constraint firstAttribute="trailing" secondItem="URa-8c-U0v" secondAttribute="trailing" constant="60" id="zs8-p6-rKp"/>
+                    <constraint firstAttribute="trailing" secondItem="URa-8c-U0v" secondAttribute="trailing" id="zs8-p6-rKp"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
